--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,13 @@
     <title>Traffic Lights</title>
 </head>
 <body>
-<div name="redLight">
+<div hourOfDay="redLight">
     <h1>Red Light</h1>
 </div>
-<div name="yellowLight">
+<div hourOfDay="yellowLight">
     <h1>Yellow Light</h1>
 </div>
-<div name="greenLight">
+<div hourOfDay="greenLight">
     <h1>Green Light</h1>
 </div>
 <button type="button" onclick="changeLight()">Change Light</button>
